--- a/members.html
+++ b/members.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>musdaa/members</title>
     <style>
         .grid {
             display: grid;
@@ -325,12 +325,12 @@
 </header>
 <nav>
     <ul>
-        <li><a href="#home">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <!-- <li><a href="#activities">Activities</a></li>
         <li><a href="#achievements">Achievements</a></li>
         <li><a href="#products">Our Products</a></li>
         <li><a href="#calender">Our Calender</a></li> -->
-        <li><a href="database.html">Members</a></li>
+        <li><a href="members.html">Members</a></li>
         
     </ul>
 </nav>
